# OrthogonalLinkedOctree

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  HOWTO_COMPILE_PYTORCH.md  INSTALL.md  INSTALL_UBUNTU1604.md  OrthogonalLinkedOctree.cpp  README.md  SingletonBase.cpp  SingletonBase.h  main.cpp
OrthogonalLinkedOctree/: CMakeLists.txt  OrthogonalLinkedOctree.cpp  OrthogonalLinkedOctree.h
examples/: CMakeLists.txt  OrthogonalLinkedOctreeBenchmark.cpp  OrthogonalLinkedOctreeInPly.cpp  OrthogonalLinkedOctreeWithTorch.cpp
examples/benchmark/: CMakeLists.txt  CoordinateBenchmark.cpp  OrthogonalLinkedOctreeBenchmark.cpp
examples/benchmark/pvcnn/: CMakeLists.txt  PVCNNBenckmark.cpp  utils.hpp
examples/benchmark/pvcnn/ball_query/: ball_query.hpp
file_format/plyfile/: CMakeLists.txt  PlyCommentList.cpp  PlyCommentList.h  PlyEdge.cpp  PlyEdge.h  PlyEdgeList.cpp  PlyEdgeList.h  PlyFace.cpp  PlyFace.h  PlyFaceList.cpp  PlyFaceList.h  PlyFile.cpp  PlyFile.h  PlyFileEncoding.cpp  PlyFileEncoding.h  PlyPropertyType.cpp  PlyPropertyType.h  PlyVertex.cpp  PlyVertex.h  PlyVertexList.cpp  PlyVertexList.h  README.md
file_format/plyfile_for_python/: CMakeLists.txt  PyPlyFile.cpp  PyPlyFile.h  PyPlyVertex.cpp  PyPlyVertex.h  README.md  plyfile_for_python.cpp
file_format/point_cloud_base_presentation/: CMakeLists.txt  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  PointEdge.cpp  PointEdge.h  PointEdgeList.cpp  PointEdgeList.h  PointFace.cpp  PointFace.h  PointFaceList.cpp  PointFaceList.h  PointList.cpp  PointList.h  README.md
orthogonal_linked/orthogonal_linked_list/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  CoordinateDimensionMismatchException.cpp  CoordinateDimensionMismatchException.h  InvalidLinkedCoordinateHeadAndTail.cpp  InvalidLinkedCoordinateHeadAndTail.h  LinkedCoordinate.cpp  LinkedCoordinate.h  README.md  Tensor.cpp  Tensor.h
orthogonal_linked/orthogonal_linked_list/test/: CMakeLists.txt  Test.cpp
orthogonal_linked/orthogonal_linked_list_test/: CMakeLists.txt  Test.cpp
orthogonal_linked/orthogonal_linked_octree/: CMakeLists.txt  LinkedOctree.cpp  LinkedOctree.h  NodeCoordinate.cpp  NodeCoordinate.h  OctreeNode.cpp  OctreeNode.h  README.md
orthogonal_linked/orthogonal_linked_octree_for_python/: CMakeLists.txt  LinkedOctreeInPly.cpp  LinkedOctreeInPly.h  OctreeNodeInPly.cpp  OctreeNodeInPly.h  README.md  orthogonal_linked_octree_for_python.cpp
orthogonal_linked/orthogonal_linked_octree_for_python_test/: test_init.py
orthogonal_linked/orthogonal_linked_octree_test/: CMakeLists.txt  Test.cpp
orthogonal_linked/orthogonal_linked_octree_test/fixtures/: PointFixture.cpp  PointFixture.h  PointListFixture.cpp  PointListFixture.h
orthogonal_linked/orthogonal_linked_octree_with_torch/: CMakeLists.txt  LinkedOctree.h
