add_executable(OrthogonalLinkedOctreeBenchmark OrthogonalLinkedOctreeBenchmark.cpp)
if (TORCH_RV EQUAL 0)
    target_link_libraries(OrthogonalLinkedOctreeBenchmark ${TORCH_LIBRARIES})
    target_link_libraries(OrthogonalLinkedOctreeBenchmark orthogonal_linked_octree_with_torch)
endif()
target_link_libraries(OrthogonalLinkedOctreeBenchmark orthogonal_linked_octree)
target_link_libraries(OrthogonalLinkedOctreeBenchmark orthogonal_linked_list)
target_link_libraries(OrthogonalLinkedOctreeBenchmark plyfile)
target_link_libraries(OrthogonalLinkedOctreeBenchmark point_cloud_base_presentation)

add_executable(CoordinateBenchmark CoordinateBenchmark.cpp)
if (TORCH_RV EQUAL 0)
    target_link_libraries(CoordinateBenchmark ${TORCH_LIBRARIES})
    target_link_libraries(CoordinateBenchmark orthogonal_linked_octree_with_torch)
endif()
target_link_libraries(CoordinateBenchmark orthogonal_linked_list)

if (TORCH_RV EQUAL 0)
    add_subdirectory ("pvcnn")
endif()
